<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbkg"
    android:layout_gravity="center"
    tools:context=".LoginActivity">
        
        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="90dp"
            android:scaleX="1.4"
            android:scaleY="1.5"
            android:layout_centerHorizontal="true"
            android:src="@drawable/molog"
            android:contentDescription="@string/login">
        </ImageView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="30dp"
            app:cardElevation="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal"
                    android:padding="30dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:id="@+id/loginText"
                            android:textSize="36sp"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textColor="@color/bluelight"
                            android:layout_marginBottom="8dp"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:layout_marginTop="4dp"
                            app:boxCornerRadiusTopEnd="14dp"
                            app:boxCornerRadiusBottomStart="14dp"
                            app:boxCornerRadiusTopStart="14dp"
                            app:boxCornerRadiusBottomEnd="14dp"
                            app:startIconDrawable="@drawable/user"

                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="text"
                                    android:id="@+id/inputuser"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:layout_marginTop="14dp"
                            app:startIconDrawable="@drawable/password"
                            app:boxCornerRadiusTopEnd="14dp"
                            app:boxCornerRadiusBottomStart="14dp"
                            app:boxCornerRadiusTopStart="14dp"
                            app:boxCornerRadiusBottomEnd="14dp"
                            app:passwordToggleEnabled="true"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                                <com.google.android.material.textfield.TextInputEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="textPassword"
                                    android:id="@+id/inputpass"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:id="@+id/loginButton"
                            android:text="@string/login"
                            android:textSize="18sp"
                            android:layout_marginTop="18dp"
                            android:backgroundTint="@color/bluelight"
                            app:cornerRadius = "20dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/atau"
                            android:layout_gravity="center"
                            android:layout_marginTop="6dp"
                            android:textSize="11sp"
                            android:textAlignment="center"
                            android:textColor="@color/black" />

                        <LinearLayout
                            android:layout_width="140dp"
                            android:layout_height="25dp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:orientation="horizontal">
                                <ImageButton
                                    android:id="@+id/gugel"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/Google"
                                    android:layout_weight="1"
                                    android:scaleType="centerInside"
                                    android:src="@drawable/google"
                                    android:background="?android:selectableItemBackground">
                                </ImageButton>
                                <ImageButton
                                    android:id="@+id/pesbuk"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:contentDescription="@string/Facebook"
                                    android:scaleType="centerInside"
                                    android:background="?android:selectableItemBackground"
                                    android:src="@drawable/facebook">
                                </ImageButton>
                                <ImageButton
                                    android:id="@+id/discord"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:scaleType="centerInside"
                                    android:background="?android:selectableItemBackground"
                                    android:src="@drawable/discord"
                                    android:contentDescription="@string/discord">
                                </ImageButton>
                        </LinearLayout>
                </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="@string/suruhbuat"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="14sp"
            android:textStyle="bold" />
</RelativeLayout>