<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbkg"
    android:layout_gravity="center"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="18dp">

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="45dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameFill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userFill"
                android:layout_marginTop="4dp"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxCornerRadiusBottomEnd="14dp"
                app:startIconDrawable="@drawable/user"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailFill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailFill"
                android:layout_marginTop="14dp"
                app:startIconDrawable="@drawable/at"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxCornerRadiusBottomEnd="14dp"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passFill"
                android:layout_marginTop="14dp"
                app:startIconDrawable="@drawable/password"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxCornerRadiusBottomEnd="14dp"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rePass"
                android:layout_marginTop="14dp"
                app:startIconDrawable="@drawable/password"
                app:boxCornerRadiusTopEnd="14dp"
                app:boxCornerRadiusBottomStart="14dp"
                app:boxCornerRadiusTopStart="14dp"
                app:boxCornerRadiusBottomEnd="14dp"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/signinButton"
                android:text="Submit"
                android:textSize="18sp"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/bluelight"
                app:cornerRadius = "20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>